syntax = "proto3";

import "protocol/catalog/v1/catalog.proto";

package gandelm.workload.v1;

service WorkloadService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
}

message ListRequest { string catalog_id = 1; }
message ListResponse { repeated Workload workloads = 1; }

message GetRequest {
  string catalog_id = 1;
  string workload_id = 2;
}

message GetResponse { Workload workload = 1; }

message Workload {
  string workload_id = 1;
  string endpoint = 2;
  string entrypoint = 3;
  repeated ExternalLink external_links = 4;
}

message ExternalLink {
  string title = 1;
  string url = 2;
}

message ArtifactWithObject {
  catalog.v1.Artifact artifact = 1;
  string version = 2;
  string url = 3;
}
